Hot PIX update