@@ -44,10 +44,12 @@ public class PostsService {
 
     @Transactional(readOnly = true)
     public List<PostsListResponseDto> findAllDesc() {
-        return postsRepository.findAllDesc().stream()
-                .map(PostsListResponseDto::new)
-                .collect(Collectors.toList());
+        return postsRepository.findAllByOrderByIdDesc()
+                .stream()
+                .map(PostsListResponseDto::from)
+                .toList();
     }
+
 
     @Transactional
     public void delete(Long id) {
